--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov  1 18:05:02 2018</p>
+         Last Run: Thu Nov  1 19:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -30,7 +30,7 @@
                   <tbody>
                      <tr>
                         <td>10:00 AM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>1</td>
                         <td>-2</td>
                         <td>6</td>
@@ -38,7 +38,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>SW</td>
-                        <td>59</td>
+                        <td>61</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -50,19 +50,19 @@
                         <td>1</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>56</td>
+                        <td>55</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>7</td>
                         <td>5</td>
-                        <td>4</td>
+                        <td>3</td>
                         <td>54</td>
                         <td>1</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>SW</td>
-                        <td>53</td>
+                        <td>55</td>
                      </tr>
                   </tbody>
                </table>
@@ -162,7 +162,7 @@
                "data":[
                  "6",
                  "5",
-                 "4"
+                 "3"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "59",
-                 "56",
-                 "53"
+                 "61",
+                 "55",
+                 "55"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov  1 18:05:02 2018</p>
+         Last Run: Thu Nov  1 19:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -245,23 +245,23 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Chance of Rain</td>
                         <td>7</td>
                         <td>5</td>
-                        <td>24</td>
+                        <td>32</td>
                         <td>55</td>
                         <td>1</td>
                         <td>11</td>
                         <td>WNW</td>
-                        <td>90</td>
+                        <td>91</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>8</td>
                         <td>6</td>
-                        <td>19</td>
-                        <td>51</td>
+                        <td>18</td>
+                        <td>52</td>
                         <td>1</td>
                         <td>11</td>
                         <td>WNW</td>
@@ -272,12 +272,12 @@
                         <td>Mostly Cloudy</td>
                         <td>9</td>
                         <td>9</td>
-                        <td>21</td>
+                        <td>18</td>
                         <td>49</td>
                         <td>1</td>
                         <td>11</td>
                         <td>NW</td>
-                        <td>71</td>
+                        <td>70</td>
                      </tr>
                   </tbody>
                </table>
@@ -375,9 +375,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "24",
-                 "19",
-                 "21"
+                 "32",
+                 "18",
+                 "18"
                ]
              },
              {
@@ -387,7 +387,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "55",
-                 "51",
+                 "52",
                  "49"
                ]
              },
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "90",
+                 "91",
                  "78",
-                 "71"
+                 "70"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov  1 18:05:02 2018</p>
+         Last Run: Thu Nov  1 19:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Nov 06, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -463,20 +463,20 @@
                         <td>Snow Showers</td>
                         <td>-4</td>
                         <td>-7</td>
-                        <td>32</td>
-                        <td>76</td>
+                        <td>49</td>
+                        <td>77</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NNW</td>
-                        <td>90</td>
+                        <td>89</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Snow Showers</td>
                         <td>-4</td>
                         <td>-7</td>
-                        <td>24</td>
-                        <td>76</td>
+                        <td>47</td>
+                        <td>77</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NNW</td>
@@ -488,11 +488,11 @@
                         <td>-4</td>
                         <td>-7</td>
                         <td>24</td>
-                        <td>77</td>
+                        <td>79</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NNW</td>
-                        <td>88</td>
+                        <td>89</td>
                      </tr>
                   </tbody>
                </table>
@@ -590,8 +590,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "32",
-                 "24",
+                 "49",
+                 "47",
                  "24"
                ]
              },
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "76",
-                 "76",
-                 "77"
+                 "77",
+                 "77",
+                 "79"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "90",
                  "89",
-                 "88"
+                 "89",
+                 "89"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov  1 18:05:02 2018</p>
+         Last Run: Thu Nov  1 19:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 07, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -677,11 +677,11 @@
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-7</td>
-                        <td>-10</td>
-                        <td>12</td>
+                        <td>-11</td>
+                        <td>16</td>
                         <td>72</td>
                         <td>0</td>
-                        <td>6</td>
+                        <td>8</td>
                         <td>N</td>
                         <td>44</td>
                      </tr>
@@ -689,11 +689,11 @@
                         <td>10:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-7</td>
-                        <td>-10</td>
-                        <td>12</td>
+                        <td>-11</td>
+                        <td>16</td>
                         <td>73</td>
                         <td>0</td>
-                        <td>6</td>
+                        <td>8</td>
                         <td>NNE</td>
                         <td>46</td>
                      </tr>
@@ -702,7 +702,7 @@
                         <td>Partly Cloudy</td>
                         <td>-7</td>
                         <td>-10</td>
-                        <td>14</td>
+                        <td>18</td>
                         <td>75</td>
                         <td>0</td>
                         <td>6</td>
@@ -734,8 +734,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-10",
-                 "-10",
+                 "-11",
+                 "-11",
                  "-10"
                ]
              },
@@ -805,9 +805,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "12",
-                 "12",
-                 "14"
+                 "16",
+                 "16",
+                 "18"
                ]
              },
              {
