--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov  1 19:05:03 2018</p>
+         Last Run: Thu Nov  1 20:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -38,7 +38,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>SW</td>
-                        <td>61</td>
+                        <td>63</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -46,11 +46,11 @@
                         <td>4</td>
                         <td>2</td>
                         <td>5</td>
-                        <td>63</td>
+                        <td>64</td>
                         <td>1</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>SW</td>
-                        <td>55</td>
+                        <td>57</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -58,11 +58,11 @@
                         <td>7</td>
                         <td>5</td>
                         <td>3</td>
-                        <td>54</td>
+                        <td>55</td>
                         <td>1</td>
                         <td>8</td>
                         <td>SW</td>
-                        <td>55</td>
+                        <td>56</td>
                      </tr>
                   </tbody>
                </table>
@@ -172,8 +172,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "78",
-                 "63",
-                 "54"
+                 "64",
+                 "55"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "61",
-                 "55",
-                 "55"
+                 "63",
+                 "57",
+                 "56"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov  1 19:05:03 2018</p>
+         Last Run: Thu Nov  1 20:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -245,37 +245,37 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Chance of Rain</td>
-                        <td>7</td>
-                        <td>5</td>
-                        <td>32</td>
-                        <td>55</td>
+                        <td>Overcast</td>
+                        <td>8</td>
+                        <td>6</td>
+                        <td>24</td>
+                        <td>53</td>
                         <td>1</td>
                         <td>11</td>
                         <td>WNW</td>
-                        <td>91</td>
+                        <td>87</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>8</td>
                         <td>6</td>
-                        <td>18</td>
-                        <td>52</td>
+                        <td>14</td>
+                        <td>49</td>
                         <td>1</td>
                         <td>11</td>
                         <td>WNW</td>
-                        <td>78</td>
+                        <td>75</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>9</td>
                         <td>9</td>
-                        <td>18</td>
-                        <td>49</td>
+                        <td>14</td>
+                        <td>45</td>
                         <td>1</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>NW</td>
                         <td>70</td>
                      </tr>
@@ -304,7 +304,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "5",
+                 "6",
                  "6",
                  "9"
                ]
@@ -316,7 +316,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "7",
+                 "8",
                  "8",
                  "9"
                ]
@@ -375,9 +375,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "32",
-                 "18",
-                 "18"
+                 "24",
+                 "14",
+                 "14"
                ]
              },
              {
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "55",
-                 "52",
-                 "49"
+                 "53",
+                 "49",
+                 "45"
                ]
              },
              {
@@ -397,8 +397,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "91",
-                 "78",
+                 "87",
+                 "75",
                  "70"
                ]
              }
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov  1 19:05:03 2018</p>
+         Last Run: Thu Nov  1 20:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Nov 06, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -464,7 +464,7 @@
                         <td>-4</td>
                         <td>-7</td>
                         <td>49</td>
-                        <td>77</td>
+                        <td>76</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NNW</td>
@@ -475,7 +475,7 @@
                         <td>Snow Showers</td>
                         <td>-4</td>
                         <td>-7</td>
-                        <td>47</td>
+                        <td>46</td>
                         <td>77</td>
                         <td>0</td>
                         <td>8</td>
@@ -484,15 +484,15 @@
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Snow Showers</td>
                         <td>-4</td>
                         <td>-7</td>
-                        <td>24</td>
-                        <td>79</td>
+                        <td>33</td>
+                        <td>78</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NNW</td>
-                        <td>89</td>
+                        <td>90</td>
                      </tr>
                   </tbody>
                </table>
@@ -591,8 +591,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "49",
-                 "47",
-                 "24"
+                 "46",
+                 "33"
                ]
              },
              {
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "76",
                  "77",
-                 "77",
-                 "79"
+                 "78"
                ]
              },
              {
@@ -614,7 +614,7 @@
                "data":[
                  "89",
                  "89",
-                 "89"
+                 "90"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov  1 19:05:03 2018</p>
+         Last Run: Thu Nov  1 20:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 07, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -678,36 +678,36 @@
                         <td>Partly Cloudy</td>
                         <td>-7</td>
                         <td>-11</td>
-                        <td>16</td>
-                        <td>72</td>
+                        <td>22</td>
+                        <td>71</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>N</td>
-                        <td>44</td>
+                        <td>NNE</td>
+                        <td>45</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-7</td>
-                        <td>-11</td>
-                        <td>16</td>
-                        <td>73</td>
+                        <td>-10</td>
+                        <td>22</td>
+                        <td>72</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>6</td>
                         <td>NNE</td>
-                        <td>46</td>
+                        <td>47</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-7</td>
                         <td>-10</td>
-                        <td>18</td>
-                        <td>75</td>
+                        <td>24</td>
+                        <td>74</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>NNE</td>
-                        <td>47</td>
+                        <td>NE</td>
+                        <td>48</td>
                      </tr>
                   </tbody>
                </table>
@@ -735,7 +735,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-11",
-                 "-11",
+                 "-10",
                  "-10"
                ]
              },
@@ -805,9 +805,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "16",
-                 "16",
-                 "18"
+                 "22",
+                 "22",
+                 "24"
                ]
              },
              {
@@ -816,9 +816,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "71",
                  "72",
-                 "73",
-                 "75"
+                 "74"
                ]
              },
              {
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "44",
-                 "46",
-                 "47"
+                 "45",
+                 "47",
+                 "48"
                ]
              }
            ]
