--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov  2 00:05:02 2018</p>
+         Last Run: Fri Nov  2 01:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -38,7 +38,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>SW</td>
-                        <td>62</td>
+                        <td>63</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -46,11 +46,11 @@
                         <td>4</td>
                         <td>2</td>
                         <td>4</td>
-                        <td>65</td>
+                        <td>66</td>
                         <td>1</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>SW</td>
-                        <td>61</td>
+                        <td>62</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -58,7 +58,7 @@
                         <td>7</td>
                         <td>5</td>
                         <td>3</td>
-                        <td>54</td>
+                        <td>55</td>
                         <td>1</td>
                         <td>10</td>
                         <td>SW</td>
@@ -172,8 +172,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "80",
-                 "65",
-                 "54"
+                 "66",
+                 "55"
                ]
              },
              {
@@ -182,8 +182,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "63",
                  "62",
-                 "61",
                  "64"
                ]
              }
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov  2 00:05:02 2018</p>
+         Last Run: Fri Nov  2 01:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -248,36 +248,36 @@
                         <td>Overcast</td>
                         <td>8</td>
                         <td>6</td>
-                        <td>24</td>
+                        <td>17</td>
                         <td>52</td>
                         <td>1</td>
                         <td>11</td>
                         <td>WNW</td>
-                        <td>87</td>
+                        <td>86</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>8</td>
                         <td>6</td>
-                        <td>13</td>
-                        <td>53</td>
+                        <td>24</td>
+                        <td>52</td>
                         <td>1</td>
                         <td>13</td>
                         <td>NW</td>
-                        <td>75</td>
+                        <td>73</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Chance of Rain</td>
                         <td>8</td>
                         <td>6</td>
-                        <td>13</td>
+                        <td>34</td>
                         <td>49</td>
                         <td>1</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>NW</td>
-                        <td>69</td>
+                        <td>68</td>
                      </tr>
                   </tbody>
                </table>
@@ -375,9 +375,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
+                 "17",
                  "24",
-                 "13",
-                 "13"
+                 "34"
                ]
              },
              {
@@ -387,7 +387,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "52",
-                 "53",
+                 "52",
                  "49"
                ]
              },
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "87",
-                 "75",
-                 "69"
+                 "86",
+                 "73",
+                 "68"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov  2 00:05:02 2018</p>
+         Last Run: Fri Nov  2 01:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Nov 06, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -463,36 +463,36 @@
                         <td>Snow Showers</td>
                         <td>-4</td>
                         <td>-7</td>
-                        <td>49</td>
+                        <td>41</td>
                         <td>76</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NNW</td>
-                        <td>89</td>
+                        <td>91</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Snow Showers</td>
                         <td>-4</td>
                         <td>-7</td>
-                        <td>46</td>
-                        <td>77</td>
+                        <td>40</td>
+                        <td>76</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NNW</td>
-                        <td>89</td>
+                        <td>92</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Snow Showers</td>
                         <td>-4</td>
                         <td>-7</td>
-                        <td>33</td>
+                        <td>38</td>
                         <td>78</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NNW</td>
-                        <td>90</td>
+                        <td>92</td>
                      </tr>
                   </tbody>
                </table>
@@ -590,9 +590,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "49",
-                 "46",
-                 "33"
+                 "41",
+                 "40",
+                 "38"
                ]
              },
              {
@@ -602,7 +602,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "76",
-                 "77",
+                 "76",
                  "78"
                ]
              },
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "89",
-                 "89",
-                 "90"
+                 "91",
+                 "92",
+                 "92"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov  2 00:05:02 2018</p>
+         Last Run: Fri Nov  2 01:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 07, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -678,24 +678,24 @@
                         <td>Partly Cloudy</td>
                         <td>-7</td>
                         <td>-11</td>
-                        <td>22</td>
-                        <td>71</td>
+                        <td>24</td>
+                        <td>72</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NNE</td>
-                        <td>45</td>
+                        <td>46</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-7</td>
                         <td>-10</td>
-                        <td>22</td>
-                        <td>72</td>
+                        <td>24</td>
+                        <td>74</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>NNE</td>
-                        <td>47</td>
+                        <td>NE</td>
+                        <td>48</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -703,7 +703,7 @@
                         <td>-7</td>
                         <td>-10</td>
                         <td>24</td>
-                        <td>74</td>
+                        <td>75</td>
                         <td>0</td>
                         <td>6</td>
                         <td>NE</td>
@@ -805,8 +805,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "22",
-                 "22",
+                 "24",
+                 "24",
                  "24"
                ]
              },
@@ -816,9 +816,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "71",
                  "72",
-                 "74"
+                 "74",
+                 "75"
                ]
              },
              {
@@ -827,8 +827,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "45",
-                 "47",
+                 "46",
+                 "48",
                  "48"
                ]
              }
